# vampires_nx_vms_plugin

./: CMakeLists.txt  build.bat  build.sh  readme.md
ms_netcat/: CMakeLists.txt
ms_netcat/src/: ms_netcat.cpp
plugin/: CMakeLists.txt
plugin/src/ms/vampires_nx_vms_plugin/: device_agent.cpp  device_agent.h  engine.cpp  engine.h  integration.cpp  integration.h  socket_reader.cpp  socket_reader.h  utils.cpp  utils.h  vampires.cpp  vampires.h
samples/: CMakeLists.txt
samples/analytics/: CMakeLists.txt
samples/analytics/sample_analytics_plugin/: CMakeLists.txt
samples/analytics/stub_analytics_plugin/: CMakeLists.txt
src/: nx_sdk_version.inc
src/nx/sdk/: settings_model.md
unit_tests/: CMakeLists.txt
unit_tests/src/: analytics_plugin_ut.cpp
